修改天气页面标题样式(居中); 修改 about 页面; 更换 logo

--- a/src/main/webapp/static/css/style.css
+++ b/src/main/webapp/static/css/style.css
@@ -113,6 +113,10 @@ ul#search_result {
 /*endregion*/
 
 /*region 天气预报表格-----------------------------------------------*/
+.weather h3 {
+    text-align: center;
+}
+
 tr .time {
     width: 34%;
 }
