导航条添加搜索框

--- a/src/main/webapp/static/css/style.css
+++ b/src/main/webapp/static/css/style.css
@@ -82,6 +82,13 @@ ul#search_result {
     background: #dddddd;
 }
 
+ul.search-result-header {
+    width: 210px;
+    position: absolute;
+    top: 42px;
+    right: 0;
+}
+
 /*endregion*/
 
 /*region Hot Cities----------------------------------------------*/
